<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:background="@drawable/background_image">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/trip_name_id"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:background="@color/gray"
        />
    <EditText
        android:id="@+id/type_name_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/type_name"
        android:textColorHint="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/include_people"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:background="@color/gray"
        />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">
    <EditText
        android:id="@+id/add_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/add_more"
        android:textColor="@color/maroon"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/darkgray"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:onClick="addPerson"/>
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/trip_location"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:background="@color/gray"
        />
    <EditText
        android:id="@+id/location_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/type_location"
        android:textColorHint="@color/white"
        />

    <TextView

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        android:text="@string/trip_date"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        android:background="@color/gray"
        />

    <EditText
        android:id="@+id/date_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/type_date"
        android:textColorHint="@color/white"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@color/gray"
        android:text="@string/trip_time"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        />
    <EditText
        android:id="@+id/time_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/type_time"
        android:textColorHint="@color/white"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    <Button
        android:id="@+id/create_button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/create"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:textSize="24sp"
        android:background="@color/gray"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
     />

        <Button
            android:id="@+id/cancel_button_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/maroon"
            android:textStyle="bold"
            android:textSize="24sp"
            android:background="@color/gray"
            />
     </LinearLayout>>

</LinearLayout>