<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_trip_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/trip_name"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/your_trip_name_id"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/trip_name_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView

        android:id="@+id/people_on_trip_id"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/people_on_trip"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/peoples_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"/>


    <TextView

        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/trip_location"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/view_location_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView

        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/trip_date"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/view_date_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView

        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/trip_time"
        android:textSize="24sp"
        android:textColor="@color/maroon"
        android:textStyle="bold"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/view_time_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

</LinearLayout>